# webapp_samplesheet

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  samplesheet_validator.def
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
app/: app.py  checker.py  requirements.txt  samplesheet.py
app/examples/: sample_sheet_settings_index.csv
check_my_sample_sheet/: __main__.py  app.py
check_my_sample_sheet/examples/: case1.csv  case2.csv  case3.csv  sample_sheet.csv  sample_sheet_v2_bclconvert.csv
examples/: Bad_SampleSheet_alphanum.csv  Bad_SampleSheet_extra_semicolons.csv
examples/rnadiff/: design.csv  design_wrong.csv
imgs/: README
tests/: conftest.py  test_app.py  test_helpers.py
