[project]
name = "check-my-sample-sheet"
version = "1.0.0"
description = "Streamlit web application to validate Illumina sample sheets (bcl2fastq v1 and BCL Convert v2)."
authors = [{ name = "Thomas Cokelaer", email = "cokelaer@gmail.com" }]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.9,<4.0"
keywords = ["illumina", "samplesheet", "bcl2fastq", "bcl-convert", "sequana", "ngs"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    # sequana >= 0.23.0 ships BCLConvert / SampleSheetFactory / get_sample_sheet_version
    "sequana>=0.23.0",
    "streamlit>=1.28",
    "streamlit-option-menu",
    "requests",
]

[project.urls]
homepage = "https://github.com/sequana/webapp_samplesheet"
repository = "https://github.com/sequana/webapp_samplesheet"
documentation = "https://github.com/sequana/webapp_samplesheet"

[project.scripts]
check-my-sample-sheet = "check_my_sample_sheet.__main__:main"

[tool.poetry]
packages = [{ include = "check_my_sample_sheet" }]
include = ["check_my_sample_sheet/examples/*", "check_my_sample_sheet/imgs/*"]

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=check_my_sample_sheet --cov-report=term-missing"
testpaths = ["tests"]
